[gd_scene load_steps=15 format=2]

[ext_resource path="res://beach.jpg" type="Texture" id=1]
[ext_resource path="res://QuestionBox.gd" type="Script" id=2]
[ext_resource path="res://background-1.png" type="Texture" id=3]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=3]
size = 26
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.572549, 0.0588235, 0.0588235, 1 )

[sub_resource type="Theme" id=6]
/styles/stylebox = SubResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.25098, 0.188235, 0.188235, 1 )

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.25098, 0.188235, 0.188235, 1 )

[sub_resource type="GDScript" id=4]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass



"

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.25098, 0.188235, 0.188235, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.25098, 0.188235, 0.188235, 1 )

[node name="Node2D" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = -5.0
margin_right = 1982.0
margin_bottom = 1092.0
texture = ExtResource( 1 )
expand = true

[node name="Control" type="Control" parent="."]
margin_left = 803.0
margin_top = 397.0
margin_right = 873.0
margin_bottom = 437.0

[node name="QuestionBox" type="Control" parent="Control"]
margin_top = 3.05176e-05
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Control/QuestionBox"]
anchor_left = -5.35
anchor_top = 2.825
anchor_right = 11.65
anchor_bottom = 5.4
margin_left = -326.0
margin_top = 47.0001
margin_right = -326.0
margin_bottom = 47.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="Control/QuestionBox"]
anchor_left = -5.35
anchor_top = 2.825
anchor_right = 11.65
anchor_bottom = 5.4
margin_left = -274.0
margin_top = 84.0
margin_right = -334.0
margin_bottom = 44.0
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 0.333333, 0.227451, 0.14902, 1 )
custom_fonts/normal_font = SubResource( 3 )

[node name="Tween" type="Tween" parent="Control/QuestionBox"]

[node name="FloydWarshall" type="Button" parent="Control/QuestionBox"]
margin_left = 363.0
margin_top = -108.0
margin_right = 663.0
margin_bottom = -28.0001
rect_rotation = 180.0
rect_scale = Vector2( 1.5, 1.5 )
theme = SubResource( 6 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 8 )
text = "Floyd-Warshall"

[node name="Dijkstra" type="Button" parent="Control/QuestionBox"]
margin_left = -70.0
margin_top = 398.0
margin_right = 230.0
margin_bottom = 478.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 9 )
text = "Dijkstra"
script = SubResource( 4 )

[node name="Farbaenderung" type="Timer" parent="Control/QuestionBox"]
wait_time = 3.0

[node name="QuestionBox2" type="Control" parent="Control"]
margin_left = 253.0
margin_top = 200.0
margin_right = 293.0
margin_bottom = 240.0
rect_rotation = 180.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Control/QuestionBox2"]
anchor_left = -5.35
anchor_top = 2.825
anchor_right = 11.65
anchor_bottom = 5.4
margin_left = -351.0
margin_top = -47.0001
margin_right = -351.0
margin_bottom = -47.0001
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="Control/QuestionBox2"]
anchor_left = -5.35
anchor_top = 2.825
anchor_right = 11.65
anchor_bottom = 5.4
margin_left = -292.0
margin_top = -7.49994
margin_right = -352.0
margin_bottom = -47.4999
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 0.333333, 0.227451, 0.14902, 1 )
custom_fonts/normal_font = SubResource( 3 )

[node name="Tween" type="Tween" parent="Control/QuestionBox2"]

[node name="FloydWarshall" type="Button" parent="Control/QuestionBox2"]
visible = false
margin_left = 195.0
margin_top = 275.0
margin_right = 495.0
margin_bottom = 355.0
theme = SubResource( 6 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 10 )
text = "Floyd-Warshall"

[node name="Dijkstra" type="Button" parent="Control/QuestionBox2"]
visible = false
margin_left = -305.0
margin_top = 275.0
margin_right = -5.0
margin_bottom = 355.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 11 )
text = "Dijkstra"
script = SubResource( 4 )

[node name="Farbaenderung" type="Timer" parent="Control/QuestionBox2"]

[connection signal="tween_completed" from="Control/QuestionBox/Tween" to="Control/QuestionBox" method="_on_Tween_tween_completed"]
[connection signal="pressed" from="Control/QuestionBox/FloydWarshall" to="Control/QuestionBox" method="_on_FloydWarshall_pressed"]
[connection signal="pressed" from="Control/QuestionBox/FloydWarshall" to="Control/QuestionBox2" method="_on_FloydWarshall_pressed"]
[connection signal="pressed" from="Control/QuestionBox/Dijkstra" to="Control/QuestionBox" method="_on_Dijkstra_pressed"]
[connection signal="pressed" from="Control/QuestionBox/Dijkstra" to="Control/QuestionBox2" method="_on_Dijkstra_pressed"]
[connection signal="timeout" from="Control/QuestionBox/Farbaenderung" to="Control/QuestionBox" method="_on_Farbaenderung_timeout"]
[connection signal="tween_completed" from="Control/QuestionBox2/Tween" to="Control/QuestionBox2" method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Control/QuestionBox2/Farbaenderung" to="Control/QuestionBox2" method="_on_Farbaenderung_timeout"]
